--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -7,5 +7,5 @@
         <a href="{{ url_for('event_insert', code='E12') }}">+ {{ 'E12'|get_class_name }}</a>
         <a href="{{ url_for('event_insert', code='E6') }}">+ {{ 'E6'|get_class_name }}</a>
     </div>
-    {{ tables['event']|pager|safe }}
+    {{ tables['event']|pager }}
 {% endblock %}
