--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -14,13 +14,13 @@
             {'domain': classes[property.domain_id]|link + ' ' + classes[property.domain_id].name},
             {'range': classes[property.range_id]|link + ' ' + classes[property.range_id].name},
         ] %}
-        {{ data|data_table()|safe }}
+        {{ data|data_table }}
     </div>
     {% for name, table in tables.iteritems() %}
         {% if table['data']|length > 0 %}
             <div style="float:left;padding-right:2em;">
                 <p><strong>{{ name|uc_first }}</strong></p>
-                {{ tables[name]|pager|safe }}
+                {{ tables[name]|pager }}
             </div>
         {% endif %}
     {% endfor %}
