--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -6,5 +6,5 @@
         <a href="{{ url_for('actor_insert', code='E74') }}">+ {{ 'E74'|get_class_name }}</a>
         <a href="{{ url_for('actor_insert', code='E40') }}">+ {{ 'E40'|get_class_name }}</a>
     </div>
-    {{ tables['actor']|pager|safe }}
+    {{ tables['actor']|pager }}
 {% endblock %}
