--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a> >
-    {{ actor|link|safe }} > {{ _('edit')|uc_first }}
+    {{ actor|link }} > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
      {% include 'actor/form.html' %}
