--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('place')|uc_first }}{% endblock %}
 {% block content %}
-
+    <div class="button-bar">
+        <a href="{{ url_for('place_insert', code='E18') }}">+ {{ _('place')|uc_first }}</a>
+    </div>
+    {{ tables['place']|pager }}
 {% endblock %}
