--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -34,14 +34,18 @@
     <a target="_blank" href="http://dpp.oeaw.ac.at/">
         <img src="/images/sponsors/logo_dpp.png" alt="DPP" />
     </a>
-    <a target="_blank" href="http://www.oeaw.ac.at/imafo/">
-        <img src="/images/sponsors/logo_imafo.gif" alt="IMAFO" />
-    </a><br/><br/>
+    <a target="_blank" href="http://homepage.univie.ac.at/stefan.eichert/gkn/">
+        <img src="/images/sponsors/logo_frontier.png" alt="Frontier, Contact Zone or No Man's Land" />
+    </a>
+    <br/><br/>
     <a target="_blank" href="http://www.oeaw.ac.at/en/austrian-academy-of-sciences/">
         <img src="/images/sponsors/logo_oeaw.png" alt="ÖAW" />
     </a>
-    <a target="_blank" href="http://homepage.univie.ac.at/stefan.eichert/gkn/">
-        <img src="/images/sponsors/logo_frontier.png" alt="Frontier, Contact Zone or No Man's Land" />
+    <a target="_blank" href="http://www.oeaw.ac.at/imafo/">
+        <img src="/images/sponsors/logo_imafo.gif" alt="IMAFO" />
+    </a>
+    <a target="_blank" href="https://www.univie.ac.at/en/">
+        <img src="/images/sponsors/logo_university_vienna.png" alt="University of Vienna" />
     </a>
     <a target="_blank" href="https://www.fwf.ac.at/en/">
         <img src="/images/sponsors/logo_fwf.png" alt="FWF Austrian Science Fund" />
