user insert form

--- a/openatlas/templates/user/index.html
+++ b/openatlas/templates/user/index.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}{{ _('user')|uc_first }}{% endblock %}
 {% block content %}
     <div class="button-bar">
-        <a href="">+ {{ _('user')|uc_first }}</a>
+        <a href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
     </div>
     {{ tables['user']|pager }}
 {% endblock %}
