--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> >
-    {{ source.name }}
+    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> > {{ source.name }}
 {% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
