--- a/openatlas/templates/user/form.html
+++ b/openatlas/templates/user/form.html
@@ -10,14 +10,16 @@
     ] %}
 {% endif %}
 {% set data = data + [
-    {form.name.label: form.name},
+    {form.real_name.label: form.real_name},
 ] %}
 <form method="post" id="user-form">
     {{ form.csrf_token }}
     {{ form.continue_ }}
     {{ data|data_table }}
     {{ form.description.label }}<br />{{ form.description }}<br />
-    <p>{{ form.send_info.label }} {{ form.send_info }}</p>
+    {% if not user %}
+        <p>{{ form.send_info.label }} {{ form.send_info }}</p>
+    {% endif %}
     {% if not user %}
         <button type="submit">{{ _('insert')|uc_first }}</button>
         <button type="submit" onclick="$('#continue_').val('yes');$('#user-form').submit();return false;">
