--- a/openatlas/templates/user/form.html
+++ b/openatlas/templates/user/form.html
@@ -12,6 +12,9 @@
 {% set data = data + [
     {form.real_name.label: form.real_name},
 ] %}
+{% for field, errors in form.errors.iteritems() %}
+    {{ form[field].label }}: <span class="error">{{ ', '.join(errors) }}</span>
+{% endfor %}
 <form method="post" id="user-form">
     {{ form.csrf_token }}
     {{ form.continue_ }}
