--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('changelog')|uc_first }}{% endblock %}
 {% block content %}
-    {% for version_name, version in versions.iteritems() %}
+    {% for version_name, version in versions.items() %}
         <div class="changelog-version">{{ _('version')|uc_first }} {{ version_name }}</div>
         <div class="changelog-date">{{ version['date'] }}</div>
         <p>
-            {% for issue_type, issues in version['data'].iteritems() %}
-                {% for issue_number, issue_text in issues.iteritems() %}
+            {% for issue_type, issues in version['data'].items() %}
+                {% for issue_number, issue_text in issues.items() %}
                     {% if issue_number %}
                         &#8226 {{ issue_type|uc_first }}
                         <a target="_blank" href="http://redmine.craws.net/issues/{{ issue_number }}">
