--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -61,14 +61,19 @@
                     <img class="zoom" src="/images/icons/zoom-in.png" title="{{ _('zoom in') }}"
                         onclick="resizeText(1)" alt="{{ _('zoom in') }}" />
                     <img class="zoom" src="/images/icons/zoom-out.png" title="{{ _('zoom out') }}"
-                        onclick="resizeText(-1)" alt="{{ _('zoom out') }}" />
+                        onclick="resizeText(-1)" alt="{{ _('zoom out') }}" /> |
                     {% for language in config['LANGUAGES'].keys()|sort: %}
                         {% if 'language' in session and session['language'] == language: %}
                             <span>{{ language|upper }}</span>
                         {% else: %}
                             <a href="{{ url_for('set_locale', language=language) }}">{{ language|upper }}</a>
                         {% endif %}
-                    {% endfor %}
+                    {% endfor %} |
+                    {% if current_user.is_authenticated %}
+                        <a href="/logout">{{ _('logout')|uc_first }}</a>
+                    {% else %}
+                        <a href="/login">{{ _('login')|uc_first }}</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
