--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -49,13 +49,17 @@
                 <div>
                     {{ _('version')|uc_first }} {{ config['VERSION'] }} |
                     <a href="{{ url_for('index_changelog') }}">{{ _('changelog')|uc_first }}</a> |
-                    <a href="{{ url_for('user_index') }}">{{ _('user')|uc_first }}</a> |
                     <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a> |
                     <a href="{{ url_for('index_credits') }}">{{ _('credits')|uc_first }}</a> |
                     <a href="{{ url_for('index_contact') }}">{{ _('contact')|uc_first }}</a> |
                     <a href="{{ url_for('index_faq') }}">{{ _('faq')|uc_first }}</a> |
-                    <a href="{{ url_for('settings_index') }}">{{ _('settings')|uc_first }}</a> |
-                    <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
+                    {% if 'manager'|is_authorized: %}
+                        <a href="{{ url_for('user_index') }}">{{ _('user')|uc_first }}</a> |
+                        <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a> |
+                    {% endif  %}
+                    {% if 'admin'|is_authorized: %}
+                        <a href="{{ url_for('settings_index') }}">{{ _('settings')|uc_first }}</a> |
+                    {% endif  %}
                 </div>
                 <div id="language-menu">
                     <img class="zoom" src="/images/icons/zoom-in.png" title="{{ _('zoom in') }}"
