--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('place')|uc_first }}{% endblock %}
 {% block content %}
-    <div class="button-bar">
-        <a href="{{ url_for('place_insert', code='E18') }}">+ {{ _('place')|uc_first }}</a>
-    </div>
+    {% if 'editor'|is_authorized: %}
+        <div class="button-bar">
+            <a href="{{ url_for('place_insert', code='E18') }}">+ {{ _('place')|uc_first }}</a>
+        </div>
+    {% endif %}
     {{ tables['place']|pager }}
 {% endblock %}
