--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('reference')|uc_first }}{% endblock %}
 {% block content %}
-    <div class="button-bar">
-        <a href="{{ url_for('reference_insert', code='bibliography') }}">+ {{ _('bibliography')|uc_first }}</a>
-        <a href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
-        <a href="{{ url_for('reference_insert', code='carrier') }}">+ {{ 'E84'|get_class_name }}</a>
-    </div>
+    {% if 'editor'|is_authorized: %}
+        <div class="button-bar">
+            <a href="{{ url_for('reference_insert', code='bibliography') }}">+ {{ _('bibliography')|uc_first }}</a>
+            <a href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
+            <a href="{{ url_for('reference_insert', code='carrier') }}">+ {{ 'E84'|get_class_name }}</a>
+        </div>
+    {% endif %}
     {{ tables['reference']|pager }}
 {% endblock %}
