--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -8,13 +8,14 @@
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
     </ul>
     <div id="tab-info">
-        {% if 'editor'|is_authorized: %}
-            <div class="button-bar">
+        <div class="button-bar">
+            {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('source_update', source_id=source.id) }}">{{ _('edit')|uc_first }}</a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ source.name.replace('\'', '') }}?')"
                    href="{{ url_for('source_delete', source_id=source.id) }}">{{ _('delete')|uc_first }}</a>
-            </div>
-        {% endif %}
+            {% endif %}
+            {{ source.id|bookmark_toggle }}
+        </div>
         <h1>{{ source.name }}</h1>
         {% set data = [
             {'name': source.name},
