--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -9,13 +9,15 @@
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
     </ul>
     <div id="tab-info">
-        {% if 'editor'|is_authorized and event.name != config['EVENT_ROOT_NAME']: %}
-            <div class="button-bar">
+        <div class="button-bar">
+            {% if 'editor'|is_authorized and event.name != config['EVENT_ROOT_NAME']: %}
                 <a href="{{ url_for('event_update', event_id=event.id) }}">{{ _('edit')|uc_first }}</a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ event.name.replace('\'', '') }}?')"
                    href="{{ url_for('event_delete', event_id=event.id) }}">{{ _('delete')|uc_first }}</a>
-            </div>
-        {% endif %}
+            {% endif %}
+            {{ event.id|bookmark_toggle }}
+        </div>
+
         <h1>{{ event.name }}</h1>
         {% set data = [
             {'name': event.name},
