--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -1,14 +1,20 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('overview')|uc_first }}{% endblock %}
 {% block content %}
-    <div>{{ intro|safe }}</div>
-    <div>
-        {{ _('text_intro',
-            link_openatlas='<a target="_blank" href="http://openatlas.eu/">OpenAtlas</a>'|safe,
-            link_github='<a target="_blank" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
-            link_cidoc='<a target="_blank" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
-            link_wiki='<a target="_blank" href="http://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
-            link_demo='<a target="_blank" href="http://openatlas.craws.net">Demo</a>'|safe
-        )|nl2br }}
-    </div>
+    {% if tables['bookmarks'].data %}
+        <h1>Bookmarks</h1>
+        {{ tables['bookmarks']|pager }}
+    {% endif %}
+    {% if not current_user.is_authenticated %}
+        <div>{{ intro|safe }}</div>
+        <div>
+            {{ _('text_intro',
+                link_openatlas='<a target="_blank" href="http://openatlas.eu/">OpenAtlas</a>'|safe,
+                link_github='<a target="_blank" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
+                link_cidoc='<a target="_blank" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
+                link_wiki='<a target="_blank" href="http://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
+                link_demo='<a target="_blank" href="http://openatlas.craws.net">Demo</a>'|safe
+            )|nl2br }}
+        </div>
+    {% endif %}
 {% endblock %}
