--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -9,13 +9,14 @@
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
     </ul>
     <div id="tab-info">
-        {% if 'editor'|is_authorized: %}
-            <div class="button-bar">
+        <div class="button-bar">
+            {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('place_update', place_id=place.id) }}">{{ _('edit')|uc_first }}</a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ place.name.replace('\'', '') }}?')"
                    href="{{ url_for('place_delete', place_id=place.id) }}">{{ _('delete')|uc_first }}</a>
-            </div>
-        {% endif %}
+            {% endif %}
+            {{ place.id|bookmark_toggle }}
+        </div>
         <h1>{{ place.name }}</h1>
         {% set data = [
             {'name': place.name},
