--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -9,13 +9,14 @@
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
     </ul>
     <div id="tab-info">
-        {% if 'editor'|is_authorized: %}
-            <div class="button-bar">
+        <div class="button-bar">
+            {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('reference_update', reference_id=reference.id) }}">{{ _('edit')|uc_first }}</a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ reference.name.replace('\'', '') }}?')"
                    href="{{ url_for('reference_delete', reference_id=reference.id) }}">{{ _('delete')|uc_first }}</a>
-            </div>
-        {% endif %}
+            {% endif %}
+            {{ reference.id|bookmark_toggle }}
+        </div>
         <h1>{{ reference.name }}</h1>
         {% set data = [
             {'name': reference.name},
