--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -171,7 +171,7 @@ img.zoom {
     text-decoration: none;
 }
 
-#language-menu {
+#language-menu, #greeting {
     float: right;
     margin-top: 1em;
 }
