added ACDH to credits

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -50,6 +50,9 @@
     <a target="_blank" href="https://www.fwf.ac.at/en/">
         <img src="/images/sponsors/logo_fwf.png" alt="FWF Austrian Science Fund" />
     </a>
+    <a target="_blank" href="https://www.oeaw.ac.at/acdh">
+        <img src="/images/sponsors/logo_acdh.png" style="height:60px;" alt="ACDH - Austrian Centre for Digital Humanities" />
+    </a>
     <p>
         <a target="_blank" href="http://www.oeaw.ac.at/imafo/arbeitsgruppen/fruehmittelalter/projekte-historische-identitaetsforschung/einzelprojekte/ostalpenraum-revisited/">
             Ostalpenraum-revisited
