--- a/openatlas/templates/index/contact.html
+++ b/openatlas/templates/index/contact.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ _('contact')|uc_first }}{% endblock %}
+{% block breadcrumb %}
+    <a href="{{ url_for('index_faq') }}">{{ _('overview')|uc_first }}</a> >
+    {{ _('contact')|uc_first }}
+{% endblock %}
 {% block content %}
     {{ contact|safe }}
 {% endblock %}
