--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ _('credits')|uc_first }}{% endblock %}
+{% block breadcrumb %}
+    <a href="{{ url_for('index_faq') }}">{{ _('overview')|uc_first }}</a> >
+    {{ _('credits')|uc_first }}
+{% endblock %}
 {% block content %}
     <h1>Team</h1>
     <p>
