user profile, refactoring table funcions

--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -7,7 +7,7 @@
     </div>
     <div style="float:left;">
         <h1>{{ _('information')|uc_first }}</h1>
-        {{ tables['info']|data_table }}
+        {{ tables['info']|data_table2 }}
     </div>
     <div style="float:left;">
         <h1>{{ _('display')|uc_first }}</h1>
