--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -18,7 +18,7 @@
             {{ actor.id|bookmark_toggle }}
         </div>
         <h1>{{ actor.name }}</h1>
-        {{ data['info']|data_table2 }}
+        {{ data['info']|data_table }}
         {{ actor|description }}
     </div>
 </div>
