--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -22,7 +22,7 @@
         {% set data = [
             {'name': event.name},
         ] %}
-        {{ data['info']|data_table2 }}
+        {{ data['info']|data_table }}
         {{ event|description }}
     </div>
 </div>
