--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -18,7 +18,7 @@
             {{ place.id|bookmark_toggle }}
         </div>
         <h1>{{ place.name }}</h1>
-        {{ data['info']|data_table2 }}
+        {{ data['info']|data_table }}
         {{ place|description }}
     </div>
 </div>
