--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -18,7 +18,7 @@
             {{ reference.id|bookmark_toggle }}
         </div>
         <h1>{{ reference.name }}</h1>
-        {{ data['info']|data_table2 }}
+        {{ data['info']|data_table }}
         {{ reference|description }}
     </div>
 </div>
