--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -17,7 +17,7 @@
             {{ source.id|bookmark_toggle }}
         </div>
         <h1>{{ source.name }}</h1>
-        {{ data['info']|data_table2 }}
+        {{ data['info']|data_table }}
         {{ source|description }}
     </div>
 </div>
