--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -8,11 +8,11 @@
     <div style="float:left;padding-right:2em;">
         <p><strong>{{ _('info')|uc_first }}</strong></p>
         {% set data = [
-            {'code': property.code},
-            {'name': property.name},
-            {'inverse': property.name_inverse},
-            {'domain': classes[property.domain_id]|link + ' ' + classes[property.domain_id].name},
-            {'range': classes[property.range_id]|link + ' ' + classes[property.range_id].name},
+            ('code', property.code),
+            ('name', property.name),
+            ('inverse', property.name_inverse),
+            ('domain', classes[property.domain_id]|link + ' ' + classes[property.domain_id].name),
+            ('range', classes[property.range_id]|link + ' ' + classes[property.range_id].name),
         ] %}
         {{ data|data_table }}
     </div>
