--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -15,11 +15,6 @@
         Software Development, CIDOC CRM Adaptions and Mappings
     </p>
     <p>
-        <strong>Christof Rauchenberger</strong>
-        <a target="_blank" href="http://craws.net">http://craws.net</a><br />
-        System Administration
-    </p>
-    <p>
         <strong>Jan Belik</strong>
         <a target="_blank" href="http://janbelik.com">http://janbelik.com</a><br />
         Graphic Design
@@ -64,6 +59,7 @@
     <h1>Contributors</h1>
     <p>
         Bernhard Koschicek (DPP)<br />
+        Christof Rauchenberger (craws.net)<br />
         Johannes Preiser-Kapeller (MEDCON)<br />
         Katharina Winckler (DPP)<br />
         Mihailo Popović (DPP)<br />
