display form filter function, profile continued

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -121,7 +121,7 @@
                     {% endfor %}
                     {% if form and form.errors %}
                         {% for fieldName, errorMessages in form.errors.items(): %}
-                            {{ fieldName }} - {{ errorMessages }}
+                            {{ fieldName }} - {{ errorMessages[0] }}<br />
                         {% endfor %}
                     {% endif %}
                 </div>
